# filmQA_netOD_normalizer

./: .gitignore  CMakeLists.txt  README.md  README_ja.md
i18n/: filmQA_netOD_normalizer_ja_JP.qm
src/: custom_types.h  cv_mat_processor.cpp  cv_mat_processor.h  cvmat_qimage_bridge.cpp  cvmat_qimage_bridge.h  filmQA_netOD_normalizer_ja_JP.ts  image_path_edit.cpp  image_path_edit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_graphics_view.cpp  my_graphics_view.h  my_graphics_view.ui  normalization_window.cpp  normalization_window.h  normalization_window.ui  process_step_widget.cpp  process_step_widget.h  process_step_widget.ui  pushbutton_with_word_wrap.cpp  pushbutton_with_word_wrap.h
